--- a/style/style.css
+++ b/style/style.css
@@ -25,13 +25,11 @@ body {
   color: #0a3871;
   font-size: 16px;
   font-weight: 400;
-
 }
-
 
 .conteudo__div__resp {
   background-color: white;
-  width: 50vh;
+  width: 60vh;
   height: 100vh;
   border-radius: 32px;
   display: flex;
@@ -39,9 +37,7 @@ body {
   font-size: 500;
   font-weight: 600;
   color: #0a3871;
-  padding-top: 30px;
-  padding-left: 30px;
-
+  align-items: center;
 }
 
 ::placeholder {
@@ -55,24 +51,26 @@ body {
   border: none;
   resize: none;
   width: 50vh;
-  height: 90vh;
+  height: 20vh;
   font-size: 500;
   font-weight: 600;
   color: #0a3871;
+  padding-top: 30px;
+  padding-left: 30px;
 }
 
 .conteudo__div__resp__copy {
   background-color: #d8dfe8;
-  width: 50vh;
-  height: 10vh;
+  width: 328px;
+  height: 67px;
   text-align: center;
   border-radius: 24px;
   font-size: 16px;
   font-weight: 400;
-  gap: 8px;
   text-decoration: none;
   color: #0a3871;
-  margin-top: 75vh;
+  position: absolute;
+  margin-top: 550px;
 }
 
 .conteudo__div__resp__copy:hover {
@@ -125,29 +123,20 @@ body {
   padding-right: 390px;
 }
 
-.img{
+.img {
   background-color: white;
   padding-top: 10px;
+  width: 23rem;
 }
 
-.notFound__text{
+.notFound__text {
   color: #0a3871;
   background-color: white;
   border-radius: 32px;
   padding-top: 30px;
   padding-left: 30px;
-  
 }
 
-@media (max-width: 800px){
-  .logo{
-
-  }
-
-  .conteudo{
-    flex-direction: column;
-  }
-  .div__vazia{
-    border: solid 1px red;
-  }
+@media (max-width: 900px) {
+  
 }
